Revision history for Dist-Zilla-PluginBundle-Author-ETHER

{{$NEXT}}
          - bump some prereq requirements to fix failing tests

0.155     2020-04-30 21:37:07Z
          - exclude local plugins (e.g. =inc::MakeMaker) from being added to
            x_Dist_Zilla prereqs and therefore being checked for by
            [PromptIfStale]

0.154     2020-04-09 00:29:43Z
          - new "bugtracker" option, to use github issues instead of RT

0.153     2020-04-04 04:32:08Z
          - add mention of git submodules, when relevant, in CONTRIBUTING

0.152     2020-03-24 01:01:11Z
          - skip a test when a necessary feature of Dist::Zilla is not
            available (normal runtime functionality not affected)
          - add (version-guarded) no indirect; to code and minting templates
          - add mention of irc.freenode.org to the SUPPORT section of woven
            pod

0.151     2020-01-18 05:41:38Z
          - update $TODO in xt/author/changes_has_content.t to also give a bye
            to the 'devel' branch

0.150     2019-08-30 19:12:01Z
          - fix parsing of .pause file (sorry, oalders!)

0.149     2019-06-01 05:36:07Z
          - set PERL_USE_UNSAFE_INC=0 for travis in this distribution and in
            newly-minted distributions

0.148     2019-03-31 04:31:27Z
          - adjusted test of [Git::Tag] option to account for changes to the
            default made in version 2.046

0.147     2019-02-23 21:42:13Z
          - amended CONTRIBUTING file to clarify that the Changes file should
            be edited in a pull request, and all tests should pass.
          - new 'cpanfile' option, for adding a cpanfile to the distribution

0.146     2019-02-16 20:32:06Z
          - add .gitattributes file to minting profile, to tell github that
            this is perl code, not raku

0.145     2018-09-16 06:09:39Z
          - bump prereqs for [MakeMaker::Awesome] and [MakeMaker::Fallback] to
            ensure we get fixed plugin method definitions
