@@ -2,6 +2,7 @@ Revision history for Dist-Zilla-PluginBundle-Author-ETHER
 
 {{$NEXT}}
           - bump some prereq requirements to fix failing tests
+          - skip a test on older Dist::Zilla that depends on 6.003+ behaviour
 
 0.155     2020-04-30 21:37:07Z
           - exclude local plugins (e.g. =inc::MakeMaker) from being added to
